	
	* seahorse-key: Added ::get_validity, ::get_trust
	* seahorse-validity: Added SeahorseValidity, removed all functions
	except ::get_string, added ::compare
	* seahorse-encrypt-recipients-store:
	* seahorse-key-manager-store:
	Updated for new SeahorseValidity, uses seahorse_validity_compare for sorting
	* seahorse-ops-key:
	* seahorse-key-properties:
	Updated for new SeahorseValidity

2003-02-01  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-key-properties: Cleanup, string updates, added tooltips
	* seahorse-ops-key: State minimization for ::set_trust, ::del_subkey,
	::add_subkey
	* seahorse-generate:
	* seahorse-import:
	* seahorse-export:
	* seahorse-text-editor:
	String updates
	* seahorse-file-manager: Added same accelerators as text-editor's

2003-02-01  Jose Carlos Garcia Sogo <jsogo@debian.org>

	* configure.in: Fixed check for GnuPG and GpgME functions.

2003-01-31  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-ops-key: Fixed up ::add_subkey, added ::revoke_subkey
	* seahorse-revoke: Added
	* seahorse-key-properties: Updated to revoke subkeys,
	use new seahorse-delete, hide subkeys by default, show subkey status
	* seahorse-delete: Does primary and subkey deletion
	* seahorse-key-manager: Updated to use new seahorse-delete
	
	* Released 0.6.1

2003-01-30  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-key-manager-store: Show user IDs instead of subkeys,
	listen to SKEY_CHANGE_UIDS & refresh
	* seahorse-key-store: ::append_column returns the column,
	::init makes NAME column sortable
	* seahorse-ops-key: ::add_subkey fixups, added ::del_subkey,
	changed ::set_expires to accept an index for subkeys
	* seahorse-key-properties: Updated to do subkey deletion & subkey expires

2003-01-29  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-add-subkey: Added
	* seahorse-key-manager: Added patch from Jose to do about dialog
	* src/dialogs/about.glade2: Removed
	* seahorse-key-properties: Updated for add-subkey