@@ -2,7 +2,12 @@
 _Name=GPG Keys Manager
 _Comment=Manage your GPG keys
 Exec=seahorse
-Terminal=0
+Terminal=false
 Type=Application
 Icon=seahorse.png
 Categories=Application;Cryptography;
+StartupNotify=true
+X-GNOME-Bugzilla-Bugzilla=GNOME
+X-GNOME-Bugzilla-Product=seahorse
+X-GNOME-Bugzilla-Component=general
+X-GNOME-DocPath=seahorse/seahorse.xml
