@@ -9,6 +9,7 @@
 	* seahorse-ops-key:
 	* seahorse-key-properties:
 	Updated for new SeahorseValidity
+	* seahorse.desktop.in: Updated with StartupNotify & X-GNOME settings
 
 2003-02-01  Jacob Perkins  <jap1@users.sourceforge.net>
 
